--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@angular/animations": "^4.3.1",
     "@angular/cdk": "github:angular/cdk-builds",
+    "@angular/cli": "^1.2.1",
     "@angular/common": "^4.3.1",
     "@angular/compiler": "^4.3.1",
     "@angular/core": "^4.3.1",
