--- a/server/package.json
+++ b/server/package.json
@@ -16,5 +16,8 @@
     "knex": "^0.13.0",
     "morgan": "^1.8.2",
     "pg": "^7.0.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.1"
   }
 }
